feat: migrate runtime configuration to JSON